--- a/assets/style.css
+++ b/assets/style.css
@@ -8,3 +8,21 @@ html, body {
   font-size: 16px;
   font-family: sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+}
+
+.container {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+section {
+  margin: 50px 0;
+}
+
+img {
+  width: 100%;
+}
