--- a/assets/style.scss
+++ b/assets/style.scss
@@ -13,3 +13,16 @@ h1,h2,h3,h4,h5,h6{
     text-align: center;
 }
 
+.container{
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+section{
+    margin: 50px 0;
+}
+
+img{
+    width: 100%;
+}
